--- a/style.css
+++ b/style.css
@@ -116,24 +116,12 @@ li a{
     cursor: pointer;
 }
 
-.social-icons span {
-    width: 40px;
-    height: 40px;
-    background: #fff;
-    color: #1a1a1a;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.3s ease;
+.social-icons img {
+    height: 2em;
+    width: 2em;
 }
 
-.social-icons span:hover {
-    background: #ff4444;
-    color: #fff;
-}
+
 
 .stats-section {
     background-color: #000;
@@ -264,12 +252,15 @@ li a{
     font-size: 3.5rem;
     margin-bottom: 30px;
     font-weight: bold;
+    color: white;
 }
 
 .structure-content p {
     font-size: 1.3rem;
     margin-bottom: 40px;
     opacity: 0.9;
+    font-weight: bold;
+    color: white;
 }
 
 .structure-button {
@@ -281,6 +272,7 @@ li a{
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease;
+    font-weight: bold;
 }
 
 .structure-button:hover {
@@ -622,9 +614,9 @@ li a{
 .course-image img{
     width: 100%;
     height: 100%;
-    object-fit: cover;   /* Mantém proporção e preenche o espaço */
+    object-fit: cover;   
     display: block;
-    border-radius: 8px;  /* Opcional */
+    border-radius: 8px;  
 }
 
 .course-image img.contain,
@@ -673,6 +665,7 @@ li a{
     .slider-controls {
         gap: 20px;
         margin-top: 30px;
+        margin-top: 0.3rem;
     }
 
     .slider-btn {
@@ -759,6 +752,7 @@ li a{
     .slider-controls {
         gap: 15px;
         margin-top: 20px;
+        margin-top: 0.3rem; 
     }
 
     .slider-btn {
@@ -781,4 +775,6 @@ li a{
         width: 15rem;
         height: 15rem;
     }
+
+
 }
